# html_dsl

./: .gitignore  Pipfile  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  pythonpackage.yml
html_dsl/: common.py  elements.py
tests/: test_html_dsl.py
